--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,30 @@
     <java.version>17</java.version> 
   </properties>  
   <dependencies>
+    <dependency>
+      <groupId>com.azure.spring</groupId>
+      <artifactId>spring-cloud-azure-appconfiguration-config-web</artifactId>
+      <version>4.8.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.azure.spring</groupId>
+      <artifactId>spring-cloud-azure-feature-management-web</artifactId>
+      <version>4.8.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
     <!-- Adds the Ability to Push Refresh -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.azure.spring</groupId>
+      <artifactId>spring-cloud-azure-appconfiguration-config-web</artifactId>
+      <version>4.8.0</version>
+    </dependency>
     <dependency> 
       <groupId>org.springframework.boot</groupId>  
       <artifactId>spring-boot-starter-web</artifactId> 
@@ -29,11 +52,7 @@
     </dependency> 
   </dependencies>  
   <build> 
-    <plugins> 
-      <plugin> 
-        <groupId>org.springframework.boot</groupId>  
-        <artifactId>spring-boot-maven-plugin</artifactId> 
-      </plugin>
+    <plugins>
       <plugin>
         <groupId>com.microsoft.azure</groupId>
         <artifactId>azure-webapp-maven-plugin</artifactId>
@@ -43,27 +62,6 @@
             <!--suppress UnresolvedMavenProperty -->
             <AppConfigurationConnectionString>${APP_CONFIGURATION_CONNECTION_STRING}</AppConfigurationConnectionString>
           </appSettings>
-          <schemaVersion>v2</schemaVersion>
-          <subscriptionId>ab4b8f8f-09fa-49e1-9dd2-bca3f5891096</subscriptionId>
-          <resourceGroup>pushSample-1687187056626-rg</resourceGroup>
-          <appName>pushSample-1687187056626</appName>
-          <pricingTier>P1v2</pricingTier>
-          <region>canadacentral</region>
-          <runtime>
-            <os>Windows</os>
-            <javaVersion>Java 17</javaVersion>
-            <webContainer>Java SE</webContainer> <!-- Or the version you want -->
-          </runtime>
-          <deployment>
-            <resources>
-              <resource>
-                <directory>${project.basedir}/target</directory>
-                <includes>
-                  <include>*.war</include>
-                </includes>
-              </resource>
-            </resources>
-          </deployment>
         </configuration>
       </plugin>
     </plugins> 
